pagePopup: Limit list height to prevent page scrollbars

--- a/Sage-Like/pagePopup/pagePopup.css
+++ b/Sage-Like/pagePopup/pagePopup.css
@@ -75,6 +75,7 @@ body {
 	font-weight: normal;
 	border-radius: 4px;
 	border: 1px solid wheat;
+	max-height: 200px;
 }
 
 .feedItem {
